# gr-blocksat

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.md  Makefile  README.md
apps/: CMakeLists.txt
apps/hier/: ffw_coarse_freq_rec.grc  frame_synchronizer.grc
cmake/Modules/: blocksatConfig.cmake  blockstreamConfig.cmake
docs/: CMakeLists.txt  README.blocksat  README.blockstream
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  blocksat_agc_cc.block.yml  blocksat_agc_cc.xml  blocksat_argpeak.xml  blocksat_da_carrier_phase_rec.block.yml  blocksat_da_carrier_phase_rec.xml  blocksat_exponentiate_const_cci.xml  blocksat_ffw_coarse_freq_rec.xml  blocksat_ffw_coarse_freq_req_cc.block.yml  blocksat_ffw_coarse_freq_req_cc.xml  blocksat_fifo_async_sink.xml  blocksat_file_sink_nonblock.xml  blocksat_frame_sync_fast.xml  blocksat_frame_synchronizer.xml  blocksat_frame_synchronizer_cc.block.yml  blocksat_frame_synchronizer_cc.xml  blocksat_mer_measurement.block.yml  blocksat_mer_measurement.xml  blocksat_nco_cc.xml  blocksat_protocol_sink.block.yml  blocksat_protocol_sink.xml  blocksat_runtime_cfo_ctrl.xml  blocksat_soft_decoder_cf.block.yml  blocksat_soft_decoder_cf.xml  blocksat_turbo_decoder.block.yml  blocksat_turbo_decoder.xml  blocksat_variable_rx_logger.block.yml  blocksat_variable_rx_logger.xml  blocksat_variable_tuning_control.block.yml  blocksat_variable_tuning_control.xml  blocksat_wrap_fft_index.xml  blockstream_argpeak.xml  blockstream_da_carrier_phase_rec.xml  blockstream_exponentiate_const_cci.xml  blockstream_ffw_coarse_freq_rec.xml  blockstream_fifo_async_sink.xml  blockstream_fifo_async_source.xml  blockstream_file_sink_nonblock.xml  blockstream_file_source_nonblock.xml  blockstream_frame_sync_fast.xml  (+9 more)
include/Module/: CMakeLists.txt
include/Module/Puncturer/: Puncturer.hpp  Puncturer.hxx
include/blocksat/: CMakeLists.txt  agc_cc.h  api.h  argpeak.h  da_carrier_phase_rec.h  exponentiate_const_cci.h  ffw_coarse_freq_req_cc.h  frame_sync_fast.h  frame_synchronizer_cc.h  mer_measurement.h  nco_cc.h  runtime_cfo_ctrl.h  soft_decoder_cf.h  turbo_decoder.h  wrap_fft_index.h
include/blockstream/: CMakeLists.txt  api.h  argpeak.h  da_carrier_phase_rec.h  exponentiate_const_cci.h  frame_sync_fast.h  mer_measurement.h  nco_cc.h  runtime_cfo_ctrl.h  turbo_decoder.h  turbo_encoder.h  wrap_fft_index.h
lib/: CMakeLists.txt  agc_cc_impl.cc  agc_cc_impl.h  argpeak_impl.cc  argpeak_impl.h  constellation.cc  constellation.h  da_carrier_phase_rec_impl.cc  da_carrier_phase_rec_impl.h  exponentiate_const_cci_impl.cc  exponentiate_const_cci_impl.h  ffw_coarse_freq_req_cc_impl.cc  ffw_coarse_freq_req_cc_impl.h  frame_sync_fast_impl.cc  frame_sync_fast_impl.h  frame_synchronizer_cc_impl.cc  frame_synchronizer_cc_impl.h  mer_measurement_impl.cc  mer_measurement_impl.h  nco_cc_impl.cc  nco_cc_impl.h  qa_blocksat.cc  qa_blocksat.h  qa_blockstream.cc  qa_blockstream.h  runtime_cfo_ctrl_impl.cc  runtime_cfo_ctrl_impl.h  soft_decoder_cf_impl.cc  soft_decoder_cf_impl.h  test_blocksat.cc  test_blockstream.cc  turbo_decoder_impl.cc  turbo_decoder_impl.h  turbo_encoder_impl.cc  turbo_encoder_impl.h  wrap_fft_index_impl.cc  wrap_fft_index_impl.h
lib/aff3ct/: Puncturer_turbo.cpp
python/: CMakeLists.txt  __init__.py  ffw_coarse_freq_rec.py  fifo_async_sink.py  fifo_async_source.py  frame_synchronizer.py  protocol_sink.py  qa_agc_cc.py  qa_da_carrier_phase_rec.py  qa_ffw_coarse_freq_req_cc.py  qa_frame_sync_fast.py  qa_frame_synchronizer_cc.py  qa_mer_measurement.py  qa_protocol_sink.py  qa_soft_decoder_cf.py  qa_turbo_decoder.py  qa_turbo_encoder.py  rx_logger.py  tuning_control.py
swig/: CMakeLists.txt  blocksat_swig.i  blockstream_swig.i
